[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/items/contract.png" type="Texture" id=1]
[ext_resource path="res://Assets/items/contract_signed.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Shop_Item.gd" type="Script" id=3]
[ext_resource path="res://Assets/items/shop_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/items/blood.png" type="Texture" id=5]
[ext_resource path="res://Assets/fonts/Gold Box 8x16 Monospaced.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/items/finger_sickle.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
font_data = ExtResource( 6 )

[node name="Shop_Item" type="TextureButton"]
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 200, 300 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Item_Name" type="Label" parent="."]
margin_left = 11.0
margin_top = 18.0
margin_right = 191.0
margin_bottom = 49.0
rect_min_size = Vector2( 180, 31 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.4, 0, 0, 1 )
text = "Item Name 1"
align = 1
autowrap = true
clip_text = true

[node name="Item_Currency" type="Sprite" parent="."]
position = Vector2( 69, 230 )
texture = ExtResource( 5 )

[node name="Item_Price" type="Label" parent="."]
margin_left = 127.0
margin_top = 187.0
margin_right = 187.0
margin_bottom = 213.0
rect_rotation = 5.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.4, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "x100"
clip_text = true

[node name="Item" type="Sprite" parent="."]
position = Vector2( 101, 114 )
texture = ExtResource( 7 )

[connection signal="pressed" from="." to="." method="purchase"]
